# aiostdlib

./: .gitignore  CHANGELOG.md  CREDITS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yaml
aiostdlib/: __init__.py  builtins.py  io.py  json.py  os.py  pathlib.py  shutil.py  sys.py  tarfile.py  tempfile.py  tomllib.py  zipfile.py
aiostdlib/internal/backports/: asyncio.py  functools.py  json.py  tomllib.py  typing.py
aiostdlib/internal/backports/io/: __init__.py
aiostdlib/internal/backports/io/src/: exceptions.py  functions.py
aiostdlib/internal/backports/io/src/python313/: __init__.py
aiostdlib/internal/backports/json/: __init__.py
aiostdlib/internal/backports/json/py313/: __init__.py  decoder.py  encoder.py  scanner.py
aiostdlib/internal/backports/json/src/: errors.py
aiostdlib/internal/backports/json/src/python313/: __init__.py  decoder.py  encoder.py  scanner.py
aiostdlib/internal/backports/os/: __init__.py
aiostdlib/internal/backports/os/src/python313/: __init__.py
aiostdlib/internal/backports/tomllib/: __init__.py  dtypes.py  errors.py  parser.py  re.py
aiostdlib/internal/backports/tomllib/py313/: __init__.py  parser.py  re.py
aiostdlib/internal/backports/tomllib/src/python313/: __init__.py  parser.py  re.py
aiostdlib/internal/core/: asyncio.py  executor.py  workers.py
aiostdlib/internal/impl/: io.py  json.py  tomllib.py
aiostdlib/internal/stdlib/: json.py  os.py  ospath.py  tomllib.py
aiostdlib/internal/utils/: decorators.py  os.py  platform.py  typing.py
aiostdlib/os/: __init__.py  path.py
dev/docker/: py310.Dockerfile  py311.Dockerfile  py312.Dockerfile  py313.Dockerfile  py39.Dockerfile
docs/: builtins.md  conf.py  index.rst  io.md  json.md  os.md  pathlib.md  shutil.md  sys.md  tarfile.md  tempfile.md  tomllib.md  zipfile.md
